k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seazone-challenge
  labels:
    app.kubernetes.io/name: reservation-api
