k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation-api
  namespace: seazone-challenge
  labels:
    app.kubernetes.io/name: reservation-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: reservation-api
  ports:
    - name: http
      port: 80
      targetPort: http
